Fix Bug 691682 - cryptic error messages when misspecifying compression type for tiff devices.

This patch makes the tiff devices take heed of errors propogated up from the
tiff library. This means we'll now drop out at the first error rather than
carry on through and give a broken file at the end silently.

Also, we output a more helpful error message in the case where the
compression type is misselected.

Cluster testing shows no changes.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12022 a1074d23-0009-0410-80fe-cf8c14f379e6